# api_swarm_mobile_robot

./: AndrijaCopyLib2ArdLib.BAT  README.md  clean_all.sh  cmake_image.sh  cmake_image_potato.sh  cmake_robot.sh  compile_image.sh  compile_robot.sh  connect_2_robot_rpi.txt  make_image.sh  make_robot.sh  pauPc_copyLib2ardLib.sh  run_asparagus_andrija.sh  run_asparagus_pau.sh  run_image.sh  run_potato_andrija.sh  run_potato_pau.sh  run_pumpkin_andrija.sh  run_pumpkin_pau.sh  serial_messages.h  setup.sh  swarm.sublime-workspace
.Trash-1000/files/: CMakeCache.txt  Makefile  cmake_install.cmake
.Trash-1000/info/: CMakeCache.txt.trashinfo  CMakeFiles.trashinfo  Makefile.trashinfo  aruco_1_0.png.trashinfo  aruco_1_1.png.trashinfo  aruco_1_2.png.trashinfo  aruco_1_3.png.trashinfo  aruco_1_4.png.trashinfo  aruco_1_5.png.trashinfo  aruco_1_6.png.trashinfo  aruco_1_7.png.trashinfo  aruco_1_8.png.trashinfo  aruco_1_9.png.trashinfo  cmake_install.cmake.trashinfo
API_Robot/: calibrate.cpp  calibrate.h  comm_.cpp  comm_.h  comm_1.cpp  comm_1.h  comm_ard.cpp  comm_ard.h  encoder.h  imu.cpp  imu.h  ir.cpp  ir.h  motor.cpp  motor.h  pins.h  servo.h  test.csv  utils.cpp  utils.h  velocity_controller.cpp  velocity_controller.h
API_Robot/MPU/: encoder.cpp  encoder.h  mpu9150.cpp  mpu9150.h
API_Robot/testing/: gmon.out  send_receive.cpp  sketch.cpp  sr  test_comm_1.cpp  test_comm_1.sh
API_Robot/trash/: velocity_controller.cpp
API_rpi/: comm_rpi.cpp  comm_rpi.h  comm_rpi_1.cpp  comm_rpi_1.h  main_robot.cpp  publisher.cpp  publisher.h  readme.txt  subscriber.cpp  subscriber.h  to_fix.txt  utils.cpp  utils.h
API_rpi/camera_calib/: VID5.xml  cc  default.xml  out_camera_data.xml  out_camera_data1.xml  run_camera_calib.sh
API_rpi/comm/: commSerial.cpp  comm_msg.cpp  comm_msg.h  comm_rpi_2.h  comm_serial.cpp  comm_serial.h  gmon.out  messages.cpp  messages.h  send_receive.cpp  sr  tests.cpp  tests_comm_msg.cpp  tests_comm_serial.cpp  tt
API_rpi/config/: config.cpp  config.h  edges.txt  nodes.txt  readme.txt  task_definition.txt  tasks.txt
API_rpi/demos_n_tests/: Makefile  demo_serial_msg  demo_serial_msg.cpp  demo_serial_msg.sh  gmon.out  readme.txt  tests_msgsss.cpp  tests_strings.cpp
API_rpi/graph/: graph.cpp
API_rpi/image/: computer_vision.h  image_analysis.cpp  image_analysis.h
API_rpi/image_proc/opencv_pc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cv  opencv_pc.cpp  opencv_pc.h  run_opencv_pc.sh
API_rpi/image_proc/opencv_pc/aruco_detection/: aruco  aruco_detection.cpp  run_aruco_pc.sh
API_rpi/image_proc/tests/aruco/: CMakeLists.txt  aruco.cpp
API_rpi/image_proc/tests/aruco_test/: CMakeCache.txt  CMakeLists.txt  Makefile  aruco  aruco.cpp  aruco_test.cpp  aruco_test.cpp.save  cmake_install.cmake
API_rpi/image_proc/tests/detect_line/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detect_line.cpp  detect_line.h  find_line  line  sketch.cpp
API_rpi/image_proc/tests/detect_line/pc/: CMakeLists.txt  pc_detect_line.cpp
API_rpi/image_proc/tests/take_pic/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  save_picture  save_picture.cpp  take_pic.cpp
API_rpi/leader_election/: bully.cpp  bully.h
API_rpi/map/: Point.cpp  Point.h  gmon.out  map.cpp
API_rpi/maps/: maps.cpp  maps.h
API_rpi/path_planning/: dijkstra.h
API_rpi/pub_sub/: CMakeCache.txt  CMakeLists.txt  pub  pub.cpp  publisher.cpp  publisher.h  sub  sub.cpp  subscriber.cpp  test_pub.cpp  test_subs.cpp
API_rpi/raspberry_pi/: leds.cpp  leds.h  pins.h
API_rpi/robot/: .robot.cpp.swp  camera.cpp  camera.h  comm_rpi_2.cpp  comm_rpi_2.h  computer_vision.cpp  computer_vision.h  controllers.cpp  controllers.h  image_analysis.cpp  image_analysis.h  item.h  item.tpp  keep_alive.cpp  keep_alive.h  main_image.cpp  main_robot.cpp  maps.h  messages.cpp  messages.h  robot.cpp  robot.cpp.save  robot.h  robot_params.cpp  robot_params.h  sensors.cpp  sensors.h  task.h  task_planner.h  tasks.cpp  tasks.h  to_improve.txt  utils.cpp  utils.h  utils.tpp
API_rpi/robot_robocup/: camera.cpp  camera.h  clean  comm_rpi_2.cpp  comm_rpi_2.h  computer_vision.h  controllers.cpp  controllers.h  item.h  main_robot.cpp  messages.cpp  robot.cpp  robot.h  robot_params.h  to_improve.txt
API_rpi/robot_robocup/test_image/potato/: CMakeLists.txt
API_rpi/robot_robocup/test_map/cmake/: CMakeLists.txt
API_rpi/task_allocation/: node_task.cpp  node_task.h  task.cpp  task.h  task_allocation.h  tasks.cpp  tasks.h  tasks_list.h
API_rpi/tests/: readme.md
API_rpi/tests/test_bully/cmake/: CMakeLists.txt
API_rpi/tests/test_gpio/cmake/: CMakeLists.txt
API_rpi/tests/test_gpio_1/cmake/: CMakeLists.txt
API_rpi/tests/test_log/cmake/: CMakeLists.txt
API_rpi/tests/test_map/cmake/: CMakeLists.txt  clean.sh
API_rpi/trash/: comm_msg.cpp  comm_msg.h  comm_rpi.cpp  comm_rpi_1.cpp  comm_rpi_1.h  comm_serial.cpp  comm_serial.h  utils.cpp  utils.h
API_rpi/utils/: item.h  item.tpp  logging.cpp  logging.h  utils.cpp  utils.h
Matlab/: DCmotor_tf.m  ball_dist_calib.m  calibIRParams.m  irCalib.m  lineFollowing.m  odoCalib.m  velocity_control.slx
Matlab/image analysis/: test1.asv  test1.m  test1.m~
drawings/: README.md
executables_high_level/: README.md  clean.sh  clean_all.sh  cmake_image.sh  cmake_image_potato.sh  cmake_robot.sh  connect_2_robot_rpi.txt  make_image.sh  make_robot.sh  robots_config.csv  robots_tests.csv  run.sh  run_asparagus_andrija.sh  run_asparagus_pau.sh  run_image.sh  run_potato_andrija.sh  run_potato_pau.sh  run_pumpkin_andrija.sh  run_pumpkin_pau.sh
executables_low_level/: README.md
head_cond_copy2robot2test/: head_cond  head_cond.sh  header_conditionals.cpp  header_conditionals.h  test_head_cond.cpp
setup/: README.md  setup.sh
software/: README.md
test_teensy_robot/: motor_plots.ipynb  motors_openLoop_noCharge.csv  motors_openLoop_noCharge_181020_1.csv  motors_openLoop_noCharge_181020_2.csv  motors_openLoop_noCharge_181020_3.csv  motors_openLoop_noCharge_181024_3.csv  motors_openLoop_noCharge_181024_4.csv  motors_openLoop_noCharge_181024_5.csv
(+170 files in other folders)
